2008-11-21  Neil Roberts  <neil@linux.intel.com>

	* clutter/pango/cogl-pango.h: Include pango/pango.h to get
	pango-renderer.h. In versions prior to 1.18.4 pangocairo.h does
	not include pango-renderer.h

2008-11-21  Neil Roberts  <neil@linux.intel.com>

	Bug 1280 - clutter_score_append_at_marker lead to segmentation
	fault in trunk and incorrect appearance in clutter-0.8

	* clutter/clutter-score.c (start_children_entries): Check whether
	the child timeline is actually attached at a marker before
	comparing whether the marker's name matches the marker
	reached. This fixes a crash that happens when a marker is reached
	on a timeline that also has child timelines attached at the
	end. Thanks to zhangwei for spotting.

2008-11-20  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-actor.c:
	(clutter_actor_set_property): Add sanity checks for NULL
	boxed values when setting the rotation center.

	* tests/interactive/test-animation.c:
	(on_button_press): Add an example on how to use the rotation
	properties to animate an actor.

2008-11-18  Neil Roberts  <neil@linux.intel.com>

	Fixed some trivial compiler warnings

	* tests/interactive/test-pixmap.c (create_pixmap): Use a format
	string instead of passing the error message directly to g_error.

	* tests/interactive/test-easing.c (test_easing_main)
	(on_button_press):
	* tests/interactive/test-animation.c (on_button_press): Use
	unsigned variables for the results from clutter_actor_get_size
	otherwise it complains about the pointer signedness being
	different.

	* clutter/clutter-script.c (clutter_script_add_search_paths): Use
	G_GSIZE_FORMAT instead of %d for a gsize parameter otherwise it
	gets upset on 64-bit.

2008-11-18  Neil Roberts  <neil@linux.intel.com>

	* tests/conform/test-timeline.c (test_timeline): Remove the delay
	idle handler after the test is finished, otherwise it will
	continue running during subsequent tests. This was breaking
	test_timeline_interpolate.
